--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>Walking with Pele</h1>
+    
+    <h2>Overview</h2>
+    <p>Walking with Pele is a web application that will provide a portal for students in search of adventure. Oahu contains a multitude of experiences for individuals to encounter. This web application will enable students to find new experiences on Oahu while also sharing their own for others to see. By doing so, the application will build upon itself in a way that it will provide new paths for new students to follow.</p>
+    
+    <h2>Sample Pages To Serve as Basis for Walking with Pele</h2>
 </body>
 </html>
